--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <meta charset="UTF-8" />
 
-<title>今天吃什么 🎀专属转盘</title>
+<title> Tracy宝宝今天吃什么 🎀专属转盘</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
