Update header text in index.html

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ h1 {
 
 <div class="container">
 
-  <h1>吃什么好呢 🍰</h1>
+  <h1>Tracy宝宝今天吃什么好呢 🍰</h1>
 
   <div class="subtitle">输入选项，再生成转盘 💝</div>
 
